--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ASFR Token</title>
+    <title>Neba Token</title>
   </head>
   <body>
     <div id="root"></div>
